--- a/docker/.env.sample
+++ b/docker/.env.sample
@@ -1,3 +1,3 @@
-HOSTNAME=hostname-domain.com
+DOMAIN_FQDN=fqdn.domain.local
 ADRESSIP=172.0.0.1
 MYSQL_USERMAIL_PASSWORD=***change me without spaces***
