--- a/docker/conf/dovecot/dovecot.conf
+++ b/docker/conf/dovecot/dovecot.conf
@@ -5,7 +5,7 @@
 # Enable installed protocols
 !include_try /usr/share/dovecot/protocols.d/*.protocol
 protocols = imap lmtp
-postmaster_address = postmaster at ____domainFQDN
+postmaster_address = postmaster@%d
 mail_plugins = $mail_plugins quota
 
 
