feat: add sieve rules

--- a/docker/conf/dovecot/dovecot.conf
+++ b/docker/conf/dovecot/dovecot.conf
@@ -346,8 +346,19 @@ plugin {
 ##################################################
 ########################## 90-sieve
 plugin {
+# ## Source documentation used
+
+# - https://doc.dovecot.org/2.3/configuration_manual/sieve/configuration/
+# - https://doc.dovecot.org/2.3/configuration_manual/sieve/examples/
+
+  sieve_default = /var/lib/dovecot/sieve/default.sieve
+  sieve_default_name = roundcube
+
   sieve = /var/mail/vhosts/%d/%n/.dovecot.sieve
-  sieve_default = /var/mail/sieve.default
-  sieve_dir = /var/mail/vhosts/%d/%n/sieve
-  sieve_after = /etc/dovecot/sieve-after
+
+  sieve_before = /var/lib/dovecot/sieve/before.step1.sieve
+  sieve_before2 = /var/lib/dovecot/sieve/before.step2.sieve
+
+  sieve_before3 = /var/mail/vhosts/%d/%n/sieve-before
+  sieve_after = /var/mail/vhosts/%d/%n/sieve-after
 }
