feat: implements the ability to enable or disable antivirus

--- a/docker/.env.sample
+++ b/docker/.env.sample
@@ -1,3 +1,11 @@
 DOMAIN_FQDN=fqdn.domain.local
 ADRESSIP=172.0.0.1
 MYSQL_USERMAIL_PASSWORD=***change me without spaces***
+
+#
+# Optional configuration with default values
+#
+# If performance is low, to preserve it
+# requirement antivirus, minimum memory 4GB
+DISABLE_ANTIVIRUS=false
+#
