fix: disable IPV6 & restrictions rules & spamd missing conf

--- a/docker/conf/dovecot/dovecot.conf
+++ b/docker/conf/dovecot/dovecot.conf
@@ -278,7 +278,7 @@ protocols = $protocols sieve
 
 service managesieve-login {
   inet_listener sieve {
-    address = ::1, 127.0.0.1
+    address = 127.0.0.1
     port = 4190
   }
 }
