--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,4 +27,5 @@ services:
       - ./volumes/ssl:/etc/_private
       - ./volumes/mail:/var/mail
       - ./volumes/mysql:/var/lib/mysql
-      - ./volumes/postfix:/var/spool/postfix
+      - ./volumes/postscreen:/etc/_postscreen
+      - ./volumes/postfix/spool:/var/spool/postfix
