fix postscreen volume lost after diff merge

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,3 +28,4 @@ services:
       - ../volumes/mail:/var/mail
       - ../volumes/mysql:/var/lib/mysql
       - ../volumes/postfix:/var/spool/postfix
+      - ../volumes/postscreen:/etc/_postscreen
