feat: add custom virtual hosts for apache 2 & change access port

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,11 +15,13 @@ services:
       - "465:465"
       - "587:587"
       - "993:993"
-      - "4000:80"
-      - "4001:3000"
-      - "4080:4080"
-      - "4190:4190"
-      - "4443:4443"
+      - "4000:4000" # front app
+      - "4001:4001" # rspamd web interface
+      - "4002:4002" # phpmyadmin
+      - "4003:3000" # nest api
+      - "4080:4080" # roundcube
+      - "4190:4190" # to delete
+      - "4443:4443" # roundcube
     extra_hosts:
       - "${DOMAIN_FQDN}:${ADRESSIP}"
     volumes:
