fix: start clamav and persist virus database

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -34,3 +34,4 @@ services:
       - ../volumes/redis:/var/lib/redis
       - ../volumes/rspamd:/var/lib/rspamd
       - ../volumes/opendkim:/etc/opendkim
+      - ../volumes/clamav:/var/lib/clamav
