feat: persist clamav database

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -33,3 +33,4 @@ services:
       - ../volumes/postscreen:/etc/_postscreen
       - ../volumes/redis:/var/lib/redis
       - ../volumes/rspamd:/var/lib/rspamd
+      - ../volumes/clamav:/var/lib/clamav
