feat: add clamav rules to rspamd

--- a/docker/conf/rspamd/override.d/milter_headers.conf
+++ b/docker/conf/rspamd/override.d/milter_headers.conf
@@ -3,6 +3,7 @@ use = [
   "x-spamd-result",
   "x-spamd-bar",
   "x-spam-status",
+  "x-virus"
   "x-rspamd-server"
 ];
 
@@ -43,6 +44,14 @@ routines {
   x-spam-status {
     header = "X-Spam-Status";
     remove = 0;
+  }
+}
+
+routines {
+  x-virus {
+    header = "X-Virus";
+    remove = 0;
+    symbols = ["CLAM_VIRUS", "JUST_EICAR"];
   }
 }
 
@@ -89,3 +98,4 @@ routines {
     }
   }
 }
+
