feat: add notification on spam rejection

--- a/docker/.env.sample
+++ b/docker/.env.sample
@@ -14,3 +14,9 @@ DISABLE_ANTIVIRUS=false
 # to the postscreen_access file.
 DISABLE_POSTCREEN_DEEP_PROTOCOL_TESTS=false
 #
+# Enable or disable notification for each SPAM rejected (e.g. Virus)
+NOTIFY_SPAM_REJECT=false
+#
+# send a local e-mail, 
+# please enter only an address known to this mail server, (e.g. root@mydomain.local)
+NOTIFY_SPAM_REJECT_TO=
