feat: add util command ll

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -40,6 +40,8 @@ COPY ./conf/ ./conf/
 COPY ./exports/ ./exports/
 RUN chmod +x ./exports/*.sh
 RUN mv ./exports/*.sh /usr/local/bin/
+RUN chmod +x ./exports/bin/*
+RUN mv ./exports/bin/* /usr/local/bin/
 
 RUN cp -R -f /opt/conf/cron.d/* /etc/cron.d/
 RUN chmod 644 /etc/cron.d/*
