--- a/docker/conf/dovecot/dovecot.conf
+++ b/docker/conf/dovecot/dovecot.conf
@@ -71,7 +71,7 @@ protocol lmtp {
 ########################## 10-logging
 log_path = /var/log/dovecot.log
 # Log unsuccessful authentication attempts and the reasons why they failed.
-auth_verbose = no
+auth_verbose = yes
 # Even more verbose logging for debugging purposes. Shows for example SQL
 # queries.
 auth_debug = no
