feat: customizable jail rules

--- a/docker/.env.sample
+++ b/docker/.env.sample
@@ -20,3 +20,12 @@ NOTIFY_SPAM_REJECT=false
 # send a local e-mail, 
 # please enter only an address known to this mail server, (e.g. root@mydomain.local)
 NOTIFY_SPAM_REJECT_TO=
+#
+# Customize fail2ban delay rules
+#
+# number of times
+FAIL2BAN_MAXRETRY=30
+# ... within this period (duration in seconds)
+FAIL2BAN_FINDTIME=90
+# ban duration in seconds
+FAIL2BAN_BANTIME=3600
