fix add template folder and removes useless instructions

--- a/docker/conf/dovecot/dovecot.conf
+++ b/docker/conf/dovecot/dovecot.conf
@@ -107,6 +107,9 @@ namespace inbox {
   mailbox Sent {
     auto=subscribe
   }
+  mailbox Templates {
+    auto=subscribe
+  }
   mailbox Trash {
     auto=subscribe
   }
@@ -224,24 +227,20 @@ protocol lda {
 ##################################################
 ##################################################
 ########################## 15-mailboxes
-namespace inbox {
-  mailbox Drafts {
-    special_use = \Drafts
-  }
-  mailbox Junk {
-    special_use = \Junk
-  }
-  mailbox Trash {
-    special_use = \Trash
-  }
-
-  mailbox Sent {
-    special_use = \Sent
-  }
-  mailbox "Sent Messages" {
-    special_use = \Sent
-  }
-}
+# namespace inbox {
+#   mailbox Drafts {
+#     special_use = \Drafts
+#   }
+#   mailbox Junk {
+#     special_use = \Junk
+#   }
+#   mailbox Trash {
+#     special_use = \Trash
+#   }
+#   mailbox Sent {
+#     special_use = \Sent
+#   }
+# }
 
 #########################
 ##################################################
