fix: ambigous name password

--- a/docker/.env.sample
+++ b/docker/.env.sample
@@ -1,6 +1,18 @@
+#
+# Required information
+#
+#
+# domain linked to the docker host
 DOMAIN_FQDN=fqdn.domain.local
+#
+# Docker host IP address
 ADRESSIP=172.0.0.1
-MYSQL_USERMAIL_PASSWORD=***change me without spaces***
+#
+# Password to administer certain parts of the server, such as the RSPAMD web interface
+# In future commits (API part), this password will be transmitted by the API (security against unencrypted passwords).
+ADMIN_PASSWORD=***change me without spaces***
+
+
 
 #
 # Optional configuration with default values
