feat: add dmarc configuration with rspamd, disable dkim in rspamd

--- a/docker/.env.sample
+++ b/docker/.env.sample
@@ -12,8 +12,6 @@ ADRESSIP=172.0.0.1
 # In future commits (API part), this password will be transmitted by the API (security against unencrypted passwords).
 ADMIN_PASSWORD=***change me without spaces***
 
-
-
 #
 # Optional configuration with default values
 #
@@ -29,7 +27,7 @@ DISABLE_POSTCREEN_DEEP_PROTOCOL_TESTS=false
 # Enable or disable notification for each SPAM rejected (e.g. Virus)
 NOTIFY_SPAM_REJECT=false
 #
-# send a local e-mail, 
+# send a local e-mail,
 # please enter only an address known to this mail server, (e.g. root@mydomain.local)
 NOTIFY_SPAM_REJECT_TO=
 #
@@ -41,3 +39,20 @@ FAIL2BAN_MAXRETRY=30
 FAIL2BAN_FINDTIME=90
 # ban duration in seconds
 FAIL2BAN_BANTIME=3600
+#
+# DMARC configuration
+#
+# Choose between RSPAMD or OpenDMARC (case sensitive)
+DMARC_SELECT=RSPAMD
+#
+# 
+DMARC_ENABLE=false
+#
+# Source of DMARC reports i.e(dmarc_reports@example.local)
+DMARC_REPORTS=
+#
+# Domain to serve i.e(example.local)
+DMARC_DOMAIN=
+#
+# Organisation i.e(Example Organisation)
+DMARC_ORG_NAME=""
