fix: change default dmarc

--- a/docker/.env.sample
+++ b/docker/.env.sample
@@ -43,7 +43,7 @@ FAIL2BAN_BANTIME=3600
 # DMARC configuration
 #
 # Choose between RSPAMD or OpenDMARC (case sensitive)
-DMARC_SELECT=RSPAMD
+DMARC_SELECT=OpenDMARC
 #
 # 
 DMARC_ENABLE=false
