--- a/docker/config/conf.d/opendmarc/opendmarc.conf
+++ b/docker/config/conf.d/opendmarc/opendmarc.conf
@@ -280,7 +280,7 @@ IgnoreHosts ____opendmarcVarFolder/etc/ignore.hosts
 ##  Specifies the path to a file that should be created at process start
 ##  containing the process ID.
 #
-PidFile /var/run/opendmarc.pid
+PidFile /var/run/opendmarc/opendmarc.pid
 
 ##  PublicSuffixList path
 ##  	default (none)
@@ -302,7 +302,7 @@ PublicSuffixList /usr/share/publicsuffix/public_suffix_list.dat
 ##  the From: domain published a DMARC record will be recorded in the
 ##  history file.
 #
-# RecordAllMessages false
+RecordAllMessages true
 
 ##  RejectFailures { true | false }
 ##  	default "false"
