hotfixes: enable SSL mode for phpmyadmin

--- a/docker/config/conf.d/apache2/sites-available/_phpmyadmin.conf
+++ b/docker/config/conf.d/apache2/sites-available/_phpmyadmin.conf
@@ -8,11 +8,11 @@ Listen 4002
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
   <IfModule mod_ssl.c>
-    # ErrorDocument 400 https://%{SERVER_NAME}:4002/
+    ErrorDocument 400 https://%{SERVER_NAME}:4002/
 
-    # SSLEngine on
-    # SSLCertificateFile /etc/_private/fullchain.pem
-    # SSLCertificateKeyFile /etc/_private/privkey.pem
+    SSLEngine on
+    SSLCertificateFile /etc/_private/fullchain.pem
+    SSLCertificateKeyFile /etc/_private/privkey.pem
   </IfModule>
 
   <Directory /var/www/mysql>
